# hb_aitc_j6_3031

./: README.md  requirements.txt
doc/: README.md  index.html  oe_obtain.html  start.bat  start.sh
doc/en/: index.html  oe_obtain.html
doc/en/guide/: benchmark.html  doc_introduction.html  env_install.html  key_concept.html  performance_tune.html
doc/guide/: benchmark.html  doc_introduction.html  env_install.html  key_concept.html  performance_tune.html
doc/guide/advanced_content/: hbdk_api_reference.html
doc/guide/appendix/: common_abbreviations.html  dataset_link.html  hbir_op.html
doc/guide/faststart/: ptq_qat_overview.html  ptq_quickstart.html  qat_quickstart.html
doc/guide/model_deployment_guidance/: pyramid_batch_resnet18_deployment_guidance.html  pyramid_resnet18_deployment_guidance.html  resizer_resnet18_deployment_guidance.html  rgb_remove_resnet18_deployment_guidance.html  rgb_resnet18_deployment_guidance.html
doc/guide/plugin/: installation.html  introduce.html  terminology.html
doc/guide/preface/: learn_oe.html  toolchain_overview.html
doc/guide/ptq/: ptq_workflow.html
doc/guide/ucp/: full_process_sample.html  ucp_overview.html
doc/static/: search_index.3_0.22.en.9bcbaa77.json  search_index.3_0.22.zh.8a71e419.json
doc/static/css/: styles.d4060814.css
doc/static/js/: 11162.ccfbaa80.js.LICENSE.txt  index.de38ed8a.js  lib-lodash.6d460d4e.js  lib-polyfill.f3f8d881.js  lib-react.57316932.js  lib-router.687d37e2.js  styles.47a58349.js
train_sample/plugin_basic/: README.md
train_sample/plugin_basic/custom_ops/: custom_cpp_op.hbm  custom_cpp_op.py
train_sample/plugin_basic/run_pipeline/: common.py  eager_mode.py  fx_mode.py
train_sample/scripts/examples/: pipeline_tools.py  pointpillars.py  pointpillars_no_hat_trainer.py
train_sample/scripts/tools/: calops.py  compare_dump_data.py  compile_perf_hbir.py  create_data.py  export_hbir.py  export_onnx.py  gen_camera_param_nusc.py  gen_reference_points_nusc.py  homography_generator.py  infer_hbir.py  model_checker.py  predict.py  quant_analysis.py  reference_points_generator.py  train.py  validation_hbir.py
whls_extract/hat/: __init__.py  _version.py  registry.py  version.py
whls_extract/hat/callbacks/: __init__.py  callbacks.py  checkpoint.py  dump_data.py  exponential_moving_average.py  freeze_bn.py  grad_scale.py  lr_updater.py  metric_updater.py  monitor.py  online_model_trick.py  param_updater.py  save_traced.py  tensorboard.py  validation.py
whls_extract/hat/core/: __init__.py  adapter.py  affine.py  anno_ts_utils.py  bev_elevation_utils.py  bev_occupancy_utils.py  box3d_utils.py  box_np_ops.py  box_torch_ops.py  box_utils.py  cam_box3d.py  camera.py  center_utils.py  circle_nms_jit.py  colormap.py  compose_transform.py  crowd.py  cvt_pack_info.py  detection_utils.py  eq_focal_length.py  eval_platform_adaptor.py  event.py  heatmap.py  heatmap_decoder.py  mask2polygon.py  nus_box3d_utils.py  point_geometry.py  position_embedding_utils.py  rotate_box_utils.py  rotate_box_utils_v2.py  task_sampler.py  traj_pred_point_level_func.py  traj_pred_typing.py  traj_pred_utils.py  traj_pred_viz_module.py  traj_pred_viz_utils.py  undistort_lut.py  utils_3d.py
whls_extract/hbdk4/runtime/x86_64_unknown_linux_gnu/nash/sample/hbrt/example/: CMakeLists.txt  cpu_bpu_mixed_model.cpp  cpu_bpu_mixed_model.h  cpu_bpu_mixed_model_example.cpp
whls_extract/hbdk4/runtime/x86_64_unknown_linux_gnu/nash/sample/hbrt/hbrt4_hbtl_wrapper/: CMakeLists.txt  Cargo.toml  build.rs
whls_extract/hbdk4/runtime/x86_64_unknown_linux_gnu/nash/sample/hbrt/hbrt4_hbtl_wrapper/include/: hbtl_c_api.h
whls_extract/hbdk4/runtime/x86_64_unknown_linux_gnu/nash/sample/hbrt/hbrt4_hbtl_wrapper/lib/wrapper/: CMakeLists.txt  wrapper.cpp
whls_extract/hbdk4/runtime/x86_64_unknown_linux_gnu/nash/sample/hbrt/hbrt4_hbtl_wrapper/src/: custom_lib.rs  lib.rs  variable_slice.rs
whls_extract/hbdk4/runtime/x86_64_unknown_linux_gnu/nash/sample/hbtl/Gcc5CXX14Sample/: CMakeLists.txt
whls_extract/hbdk4/runtime/x86_64_unknown_linux_gnu/nash/sample/hbtl/Gcc5CXX14Sample/gcc5CXX14/: CMakeLists.txt  TestRunbyValue.cpp
whls_extract/hbdk4/runtime/x86_64_unknown_linux_gnu/nash/sample/hbtl/GpuSample/: CMakeLists.txt  README.md  test.py
whls_extract/hbdk4/runtime/x86_64_unknown_linux_gnu/nash/sample/hbtl/GpuSample/CudaKernel/: CMakeLists.txt  Kernel.cu  Registry.cpp  Unary.cpp
whls_extract/hbdk4_compiler-4.1.17.dist-info/: METADATA  RECORD  WHEEL  metadata.json  top_level.txt
whls_extract/hbdk4_runtime_x86_64_unknown_linux_gnu_nash-4.1.17.dist-info/: METADATA  RECORD  entry_points.txt  metadata.json
whls_extract/hbdnn-1.0.1.dist-info/: METADATA  RECORD  top_level.txt
whls_extract/hmct-2.1.9.dist-info/: METADATA  RECORD
whls_extract/horizon_plugin_profiler/: __init__.py  _hbdk_parser_helper.py  _sensitivity_helper.py  _similarity.py  check_deploy_device.py  check_qconfig.py  check_unfused_operations.py  compare_weights.py  featuremap_similarity.py  find_bad_case.py  get_module_called_count.py  get_raw_features.py  hbir_model_profiler.py  model_profiler.py  model_profilerv2.py  profile_featuremap.py  profile_module_constraints.py  script_profile.py  set_preserve_qat_mode.py  show_cuda_memory_consumption.py
whls_extract/horizon_plugin_profiler-2.5.9.dist-info/: METADATA  RECORD  top_level.txt
whls_extract/horizon_plugin_pytorch/: __init__.py  _compat.py  dtype.py  extension.py  functional.py  jit.py  march.py  memory_opt.py  qat_mode.py  qtensor.py  tensor_dispatch_wrapper.py  torch_patch.py  version.py
whls_extract/horizon_plugin_pytorch-2.5.9+cu118.torch230.dist-info/: METADATA  RECORD  top_level.txt
whls_extract/horizon_tc_ui/: __init__.py  hb_compile.py  hb_config_generator.py  hb_eval_preprocess.py  hb_hbirruntime.py  hb_hbmruntime.py  hb_model_info.py  hb_onnxruntime.py  hb_runtime.py  hb_verifier.py  hbir_handle.py  hbm_handle.py  helper.py  version.py
whls_extract/horizon_tc_ui-3.3.11.dist-info/: METADATA  RECORD  entry_points.txt  top_level.txt
whls_extract/horizon_torch_samples-3.0.32.dist-info/: METADATA  RECORD
(+2531 files in other folders)
